Add items to .env file for production

--- a/template.env
+++ b/template.env
@@ -5,8 +5,4 @@ DEBUG=True
 SECRET_KEY=secret1
 GOOGLE_MAPS_API_KEY=secret2
 
-DB_NAME=database_name
-DB_USER=database_username
-DB_PASSWORD=database_username_password
-DB_HOST=
-DB_PORT=
+DATABASE_URL=psql://user:password@host:port/database
